# StrayFox_Engine

./: CMakeLists.txt  StrayFoxEngine.sln
Bal_Engine/: makefile
Bal_Engine/src/: main.c
Bal_Engine/src/colormap/: colormap.c  colormap.h
Bal_Engine/src/math/: math.c  math.h
Bal_Engine/src/ui/: events.c  events.h  key_id.h  ui.h
Bal_Engine/src/ui/windows/: wui.c  wui.h
StrayFoxEngine/: Main.cpp  Owindow.cpp  Owindow.h  StrayFoxEngine.vcxproj  StrayFoxEngine.vcxproj.filters  engineRoot.cpp  engineRoot.h
StrayFoxEngine/x64/Debug/: StrayFoxEngine.exe.recipe  StrayFoxEngine.ilk  vc143.idb
StrayFoxEngine/x64/Debug/StrayFoxEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  StrayFoxEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: main.c
src/colormap/: CMakeLists.txt
src/math/: CMakeLists.txt
src/ui/: CMakeLists.txt  windowManager.c  windowManager.h
src/ui/linux/: a.out  linuxWindow.c  linuxWindow.h
